<resources>
        <string name="app_name">CinemaCache</string>
        <string name="title_watchlist">My Watchlist</string>

        <string name="title_find_movies">Find Movies</string>
        <string name="title_reviews">My Reviews</string>
        <string name="title_top_movies">Top Movies</string>
        <string name="title_user">User</string>
        <string name="title_register">Register</string>
        <string name="title_login">Login</string>

        <string name="movie_title">The Matrix</string>
        <string name="movie_genre">Action</string>
        <string name="movie_description">Neo (Keanu Reeves) believes that Morpheus (Laurence Fishburne), an elusive figure considered to be the most dangerous man alive, can answer his question. What is the Matrix? Neo is contacted by Trinity (Carrie-Anne Moss), a beautiful stranger who leads him into an underworld where he meets Morpheus. They fight a brutal battle for their lives against a cadre of viciously intelligent secret agents. It is a truth that could cost Neo something more precious than his life.</string>
        <string name="movie_rating">3</string>
        <string name="movie_director">Steven Jones</string>
        <string name="shuffle_again_button">Shuffle Again</string>
        <string name="add_to_watchlist_button">Add to Watchlist</string>
        <string name="back_button">Back</string>
        <string name="genre_subtitle">Select Genres</string>
        <string name="genre_select_romance">Romance</string>
        <string name="genre_select_horror">Horror</string>
        <string name="genre_select_comedy">Comedy</string>
        <string name="genre_select_action">Action</string>
        <string name="genre_select_scifi">Sci-fi</string>
        <string name="genre_select_drama">Drama</string>

        <string name="register_complete">Registration successful.</string>
        <string name="register_error_title">Unable to register</string>
        <string name="register_error_message">Please fill in all fields.</string>

        <string name="add_watchlist_message">Added to watchlist.</string>

        <string name="register_label">Register</string>
        <string name="login_label">Login</string>
        <string name="first_name_label">First name</string>
        <string name="last_name_label">Last name</string>
        <string name="email_label">Email</string>
        <string name="password_label">Password</string>
        <string name="first_name_hint">First name</string>
        <string name="last_name_hint">Last name</string>
        <string name="email_hint">abc123@email.com</string>
        <string name="password_hint">Password</string>
        <string name="register_button">Register</string>
        <string name="login_button">Login</string>
        <string name="button_cancel_login">Cancel</string>
        <string name="login_complete">Login successful</string>
        <string name="login_error_title">Unable to login</string>
        <string name="login_error_message">Please check your email and password and try again.</string>

        <string name="logo_cd">Cinema Cache</string>
        <string name="matrix_cd">Movie poster for The Matrix</string>
        <string name="goodfellas_cd">Movie poster for the Goodfellas</string>

        <string name="genre_label">Genre</string>
        <string name="rating_label">Rating</string>
        <string name="description_label">Description</string>
        <string name="star_rating_hint">What is your star rating of this movie?</string>
        <string name="rating_hint">What did you think of the movie?</string>
        <string name="review_label">Review</string>
        <string name="now_reviewing_label">Now Reviewing</string>
        <string name="dialog_message">Review field is empty!</string>
        <string name="star_rating_label">Star Review</string>
        <string name="log_out">Log Out</string>
        <string-array name="star_array">
                <item>One Star</item>
                <item>Two Stars</item>
                <item>Three Stars</item>
                <item>Four Stars</item>
                <item>Five Stars</item>
        </string-array>

        <string name="onestar_cd">One star</string>
        <string name="twostar_cd">One star</string>
        <string name="threestar_cd">One star</string>
        <string name="fourstar_cd">One star</string>
        <string name="fivestar_cd">One star</string>

        <string name="added_to_watchlist_snackbar">Movie added to Watchlist!</string>
        <string name="added_to_reviews_snackbar">Movie review added</string>
        <string name="already_in_watchlist_snackbar">Movie has already been added to Watchlist</string>



</resources>