<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_top_movies"
        android:icon="@drawable/ic_top_movie_icon"
        android:title="@string/title_top_movies"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_find_movies"
        android:icon="@drawable/ic_find_movies_icon"
        android:title="@string/title_find_movies"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_watchlist"
        android:icon="@drawable/ic_watchlist_icon"
        android:title="@string/title_watchlist"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_reviews"
        android:icon="@drawable/ic_reviews_icon"
        android:title="@string/title_reviews"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_logout_icon"
        android:title="@string/log_out"
        app:showAsAction="always" />


</menu>