<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:background="@color/drk_gray"
    android:orientation="horizontal"
    android:padding="6dp">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/genericPoster_cd"
        android:cropToPadding="false"
        android:maxHeight="310dp"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/good_fellas_poster" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="8dp">

        <TextView
            android:id="@+id/movie_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textColor="@color/lt_green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_list_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_genre"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/movie_list_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="6"
            android:text="@string/movie_description"
            android:textColor="@color/white"
            android:textSize="12sp" />


        <LinearLayout
            android:id="@+id/rating_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rating_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rating_label"
                android:textColor="@color/lt_green" />

            <ImageView
                android:id="@+id/star_1"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/onestar_cd"
                app:srcCompat="@drawable/ic_star_icon" />

            <ImageView
                android:id="@+id/star_2"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/twostar_cd"
                app:srcCompat="@drawable/ic_star_icon" />

            <ImageView
                android:id="@+id/star_3"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/threestar_cd"
                app:srcCompat="@drawable/ic_star_icon" />

            <ImageView
                android:id="@+id/star_4"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/fourstar_cd"
                app:srcCompat="@drawable/ic_star_icon" />

            <ImageView
                android:id="@+id/star_5"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/fivestar_cd"
                app:srcCompat="@drawable/ic_star_icon" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>