<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drk_gray"
    tools:context=".DetailViewActivity">

    <FrameLayout
        android:id="@+id/logo_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_cd"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/cinemacache_logo_light" />
    </FrameLayout>

    <ImageView
        android:id="@+id/detail_movie_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/genericPoster_cd"
        android:cropToPadding="true"
        android:maxWidth="140dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_frame"
        app:srcCompat="@drawable/matrix_poster" />


    <LinearLayout
        android:id="@+id/movie_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_poster">

        <TextView
            android:id="@+id/detail_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/lt_green"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_movie_director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_director"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/detail_movie_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_genre"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/detail_movie_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_rating"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/detail_movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_description"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="160dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_info_layout">

        <Button
            android:id="@+id/back_button_details"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/lt_green"
            android:onClick="onClick"
            android:text="@string/back_button"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:iconTint="?attr/actionMenuTextColor" />

        <Button
            android:id="@+id/review_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="70dp"
            android:layout_weight="0"
            android:backgroundTint="@color/lt_green"
            android:onClick="onClick"
            android:text="@string/review_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:iconTint="?attr/actionMenuTextColor" />

        <Button
            android:id="@+id/add_to_watchlist"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="70dp"
            android:layout_weight="0"
            android:backgroundTint="@color/lt_green"
            android:text="@string/add_to_watchlist_button"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:iconTint="?attr/actionMenuTextColor" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>