<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drk_gray"
    tools:context=".FindMoviesActivity">

    <FrameLayout
        android:id="@+id/logo_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/cinemacache_logo_light" />
    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="55dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/moviePoster"
        android:layout_width="190dp"
        android:layout_height="261dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/matrix_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/movie_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moviePoster" />

    <Button
        android:id="@+id/shuffle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:backgroundTint="@color/lt_green"
        android:text="@string/shuffle_again_button"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:iconTint="?attr/actionMenuTextColor"
        app:layout_constraintEnd_toStartOf="@+id/add_to_watchlist_main"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/movie_title" />

    <Button
        android:id="@+id/add_to_watchlist_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:backgroundTint="@color/lt_green"
        android:text="@string/add_to_watchlist_button"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:iconTint="?attr/actionMenuTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shuffle_button"
        app:layout_constraintTop_toTopOf="@id/movie_title" />

    <TextView
        android:id="@+id/select_genre_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/genre_subtitle"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shuffle_button" />

    <CheckBox
        android:id="@+id/action_button"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:checkable="true"
        android:text="@string/genre_select_action"
        android:textColor="@color/lt_green"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/romance_button"
        app:layout_constraintEnd_toStartOf="@+id/horror_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline5" />

    <CheckBox
        android:id="@+id/horror_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_select_horror"
        app:layout_constraintBottom_toTopOf="@+id/scifi_button"
        app:layout_constraintEnd_toStartOf="@+id/comedy_button"
        android:textColor="@color/lt_green"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/action_button"
        app:layout_constraintTop_toBottomOf="@id/guideline5" />

    <CheckBox
        android:id="@+id/comedy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_select_comedy"
        app:layout_constraintBottom_toTopOf="@+id/drama_button"
        android:textColor="@color/lt_green"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/horror_button"
        app:layout_constraintTop_toBottomOf="@id/guideline5" />

    <CheckBox
        android:id="@+id/drama_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_select_drama"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        android:textColor="@color/lt_green"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scifi_button"
        app:layout_constraintTop_toBottomOf="@+id/comedy_button" />

    <CheckBox
        android:id="@+id/romance_button"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:text="@string/genre_select_romance"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/scifi_button"
        android:textColor="@color/lt_green"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_button" />

    <CheckBox
        android:id="@+id/scifi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_select_scifi"
        android:textColor="@color/lt_green"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/drama_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/romance_button"
        app:layout_constraintTop_toBottomOf="@+id/horror_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/action_button"
        app:layout_constraintGuide_percent="0.76"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.88"
        app:layout_constraintTop_toBottomOf="@+id/romance_button" />

</androidx.constraintlayout.widget.ConstraintLayout>