<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drk_gray"

    tools:context=".ReviewActivity">


    <FrameLayout
        android:id="@+id/logo_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_cd"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/cinemacache_logo_light" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/drk_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_frame">

        <LinearLayout
            android:id="@+id/review_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_title">

            <TextView
                android:id="@+id/now_reviewing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/now_reviewing_label"
                android:textColor="@color/lt_green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/movie_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/moviePoster"
                android:layout_width="190dp"
                android:layout_height="220dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/genericPoster_cd"
                android:src="@drawable/matrix_poster" />

            <TextView
                android:id="@+id/rating_dropdown_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star_rating_label"
                android:textColor="@color/lt_green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/rating_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/star_rating_hint"
                android:foregroundTint="@color/white"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/review_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_label"
                android:textColor="@color/lt_green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/review_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="add"
                android:fontFamily="sans-serif"
                android:hint="@string/rating_hint"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lt_gray"
                android:importantForAutofill="no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="160dp"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <Button
                    android:id="@+id/back_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="70dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/lt_green"
                    android:onClick="onClick"
                    android:text="@string/back_button"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:iconTint="?attr/actionMenuTextColor" />

                <Button
                    android:id="@+id/review_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="70dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/lt_green"
                    android:onClick="onClick"
                    android:text="@string/review_label"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:iconTint="?attr/actionMenuTextColor"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>